--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -216,7 +216,7 @@ nav a {
 }
 
 /* Estilos nos botões */
-button {
+button, #botao-enviar {
   background-color: #CD500C; 
   color: white;
   cursor: pointer;
@@ -289,30 +289,31 @@ button:hover {
 }
 
 /* Aba Curso e Saiba Mais*/
-.descricaoServicos ul {
+.curso ul,  .descricaoServicos ul {
   list-style: none;
   padding: 0;
 }
-.descricaoServicos ul li {
+.curso ul li, .descricaoServicos ul li {
   background-color: white;
   margin: 10px 0;
   padding: 15px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
- .descricaoServicos ul li ul {
+.curso ul li ul,  .descricaoServicos ul li ul {
   margin-top: 10px;
 }
-.descricaoServicos ul li ul li {
+.curso ul li ul li, .descricaoServicos ul li ul li {
   background-color: #f9f9f9;
   margin: 5px 0;
   padding: 10px;
   border-radius: 3px;
 }
-.descricaoServicos ul li ul li:hover {
+.curso ul li ul li:hover, .descricaoServicos ul li ul li:hover {
   background-color: #e9e9e9;
 }
-strong {
+
+.curso strong {
   display: block;
   font-size: 1.2em;
   margin-bottom: 10px;
@@ -336,7 +337,8 @@ tbody tr:hover {
     background-color: #f1f1f1;
     transition: background-color 0.3s;
 }
-/* Layout do administrator */
+
+/* menu de inscritos > edição */
 .menu-bar {
   display: flex;
   justify-content: space-between;
@@ -354,6 +356,7 @@ tbody tr:hover {
   display: flex;
   align-items: center;
 }
+
 /*Mensagem*/
 .msg {
   background-color: #D4EDDA;
