--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -41,13 +41,6 @@ main {
   transition: background-color 0.3s;
 }
 
-/*.mainSaibaMais, .mainLogin, .mainCadastro {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  padding: 20px;
-  transition: background-color 0.3s;
-}
 /* Auxilia a animação */
 @keyframes fadeIn {
   from {
@@ -56,6 +49,10 @@ main {
   to {
     opacity: 1;
   }
+}
+/*Icones*/
+ion-icon {
+  font-size: 20px;
 }
 
 .headerPrincipal {
@@ -75,52 +72,19 @@ main {
 }
 
 .headerPrincipal h1 {
-  font-size: 24px;
-}
-
-/* formulário de cadastra-se, atualizar dados, login e tema 
-form {
-  background-color: #f9f9f9;
-  border: 1px solid #ddd;
-  padding: 20px;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 500px;
-  margin: 20px auto;
-  transition: background-color 0.3s;
-}
-
-label {
-  margin: 15px 0 5px;
+  font-size: 27px;
   font-weight: bold;
-  font-size: 1rem;
-  color: #CD500C; 
-  transition: color 0.3s;
 }
 
-select {
-  width: 100px;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  transition: border-color 0.3s;
+.mainCadastro h2 {
+  text-align: center; /* Centraliza o texto */
+  font-size: 1.5rem;
+  color: #CD500C;
+  margin-bottom: 20px;
 }
 
-select:focus  {
-  border-color: #CD500C; 
-}
-*/
-button {
-  width: 100%;
-  padding: 10px;
-  margin-top: 0px;
-  margin-bottom: 15px;
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  transition: border-color 0.3s;
-}
-
-/* Estilos dos menus */
+/*------------------------------------------*/
+/* Menu Princial da Main */
 nav ul {
   list-style: none;
   display: flex;
@@ -150,7 +114,7 @@ nav a {
   background-color: #f28f5a;
   border-radius: 8px;
 }
-
+/*----------------------------------------------------*/
 /* Campos da aba principal (DIN, PROJETO, INFORMÁTICA UEM) */
 .servico {
   display: flex;
@@ -215,19 +179,68 @@ nav a {
   margin: 5px;
 }
 
-/* Estilos nos botões */
-button, #botao-enviar {
-  background-color: #CD500C; 
-  color: white;
+/*------------------------------------------*/
+/* Formulário de cadastrar */
+.mainCadastro form {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.mainCadastro form:hover {
+  background-color: #f1f1f1;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.mainCadastro label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #CD500C;
+  transition: color 0.3s;
+}
+
+.mainCadastro input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.mainCadastro input:focus {
+  border-color: #CD500C;
+  box-shadow: 0 0 4px rgba(205, 80, 12, 0.2);
+  outline: none;
+}
+
+.mainCadastro button {
+  background-color: #CD500C;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 1.1rem;
   cursor: pointer;
-  width: auto;
   transition: background-color 0.3s;
 }
 
-button:hover {
-  background-color: #F58A51; 
+.mainCadastro button:hover {
+  background-color: #f28f5a;
 }
-
+/*---------------------------------------------------------*/
 /* Aba SaibaMais */
 .descricaoServicos {
   padding: 20px;
@@ -264,32 +277,9 @@ button:hover {
 .descricaoServicos:hover {
   background-color: #eceff1;
 }
-
-/* Aba Avaliação */
-.botao-submit  {
-  border-color: #CD500C; 
-  background-color: #eceff1;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.botao-submit:hover {
-  background-color: #F58A51; 
-  border: none;
-  padding: 14px 22px;
-}
-
-#comentario-area {
-    width: 100%; 
-    height: 100px; 
-    padding: 10px; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
-    resize: vertical; 
-}
-
+/*--------------------------------------------------*/
 /* Aba Curso e Saiba Mais*/
-.curso ul,  .descricaoServicos ul {
+.curso ul, .descricaoServicos ul {
   list-style: none;
   padding: 0;
 }
@@ -318,46 +308,96 @@ button:hover {
   font-size: 1.2em;
   margin-bottom: 10px;
 }
-
-/* Tabela de cronograma */
+/*-----------------------------------------------*/
+/* Tabela de cronograma e inscritos */
 table {
   width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
+
+thead {
+  background-color: #f1a277;
+  color: white;
+}
+
 th, td {
-  border: 1px solid #ddd;
-  padding: 8px;
+  padding: 12px 15px;
   text-align: left;
 }
+
 th {
+  background-color: #f1a277;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+tbody tr:hover {
+  background-color: #f1f1f1;
+}
+
+tbody tr:nth-child(even) {
   background-color: #f2f2f2;
 }
-tbody tr:hover {
-    background-color: #f1f1f1;
-    transition: background-color 0.3s;
+/* Input de pesquisar */
+#search {
+  padding: 10px;
+  margin-bottom: 0.5%;
 }
 
-/* menu de inscritos > edição */
-.menu-bar {
+.search-container {
+  position: relative;
+  width: 100%;
+}
+
+.search-container ion-icon {
+  position: absolute;
+  left: 95%;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #888;
+}
+
+#voltar {
+  font-size: 20px;
+  color: #cd4a04;
+}
+#voltar ion-icon{
+  font-size: 23px;
+}
+
+/*Botões de editar e deletar*/
+.acoes {
   display: flex;
-  justify-content: space-between;
+  gap: 10px; 
+}
+
+.acoes a, .acoes form {
+  display: inline-block;
+}
+
+.acoes form {
+  display: inline-flex;
+}
+
+.acoes button {
+  display: inline-flex;
   align-items: center;
-  background-color: #f1f1f1;
+  justify-content: center;
+}
+
+#msgInscritos {
+  background-color: #f08181;
+  color: #f3eaea;
+  border: 1px solid #e00d0d;
+  width: 100%;
+  margin-bottom: 0;
+  text-align: center;
   padding: 10px;
 }
-.menu-buttons .btn {
-  margin-right: 10px;
-}
-.menu-buttons {
-  display: flex;
-}
-.menu-search {
-  display: flex;
-  align-items: center;
-}
 
-/*Mensagem*/
+/*Aviso de sucesso */
 .msg {
   background-color: #D4EDDA;
   color: #155724;
@@ -368,6 +408,78 @@ tbody tr:hover {
   padding: 10px;
 }
 
-ion-icon {
-  font-size: 20px;
+/*---------------------------------------------*/
+/* Estilo do formulário de comentários */
+.comentarios form {
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s, box-shadow 0.3s;
+}
+
+.comentarios form:hover {
+  background-color: #f1f1f1;
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
+.comentarios label {
+  display: block;
+  margin-bottom: 8px;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: #CD500C;
+  transition: color 0.3s;
+}
+
+.comentarios input,
+.comentarios textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.comentarios input:focus,
+.comentarios textarea:focus {
+  border-color: #CD500C;
+  box-shadow: 0 0 4px rgba(205, 80, 12, 0.2);
+  outline: none;
+}
+
+.comentarios textarea {
+  resize: vertical;
+  min-height: 100px;
+}
+
+/* Estilo do botão de envio de comentarios */
+.comentarios button, .servico button {
+  background-color: #CD500C;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: block; 
+  margin: 20px auto 0; 
+}
+
+.comentarios button:hover, .servico button:hover{
+  background-color: #f28f5a;
+}
+/*----------------------------------------------------*/
+.mainCadastro ion-icon, .comentarios ion-icon {
+    font-size: 15px;
 }
